--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,31 +2,14 @@
     "css.validate": false,
     "scss.validate": false,
     "editor.formatOnSave": true,
-    "eslint.autoFixOnSave": true,
+    "editor.codeActionsOnSave": { "source.fixAll.eslint": true },
     "eslint.validate": [
         "javascript",
         "javascriptreact",
-        {
-            "language": "typescript",
-            "autoFix": true
-        },
-        {
-            "language": "typescriptreact",
-            "autoFix": true
-        }
+        "typescript",
+        "typescriptreact"
     ],
-    "[javascript]": {
-        "editor.formatOnSave": false
-    },
-    "[javascriptreact]": {
-        "editor.formatOnSave": false
-    },
-    "[typescript]": {
-        "editor.formatOnSave": false
-    },
-    "[typescriptreact]": {
-        "editor.formatOnSave": false
-    },
+    "editor.codeActionsOnSaveTimeout": 3000,
     "files.insertFinalNewline": true,
     "files.eol": "\n",
     "files.autoSave": "off",
