--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "scripts": {
         "postinstall": "rimraf ./node_modules/@types/react-native",
         "start": "cross-env NODE_ENV=development npm run open:src",
-        "sb": "cross-env NODE_ENV=development babel-node src/sandbox",
         "prebuild": "npm run tsc && npm run lint && npm test && npm run cleanDist",
         "build": "cross-env NODE_ENV=production babel-node config/build",
         "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
@@ -36,57 +35,56 @@
         "node": ">=9"
     },
     "dependencies": {
-        "@types/node": "^12.12.14",
-        "axios": "^0.19.0",
-        "bootstrap": "^4.4.1",
+        "@types/node": "^13.5.1",
+        "axios": "^0.19.2",
         "connected-react-router": "^6.6.1",
-        "core-js": "^3.4.7",
+        "core-js": "^3.6.4",
         "history": "^4.10.1",
-        "npm": "^6.13.2",
+        "normalize.css": "^8.0.1",
+        "npm": "^6.13.7",
         "react": "16.11.0",
         "react-dom": "16.12.0",
-        "react-helmet": "^6.0.0-beta",
+        "react-helmet": "^6.0.0-beta.2",
         "react-redux": "^7.1.3",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
-        "redux": "^4.0.4",
+        "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.4.1"
+        "styled-components": "^5.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.7.5",
-        "@babel/node": "^7.7.4",
-        "@babel/plugin-proposal-class-properties": "^7.7.4",
-        "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-        "@babel/preset-env": "^7.7.6",
-        "@babel/preset-react": "^7.7.4",
-        "@babel/preset-typescript": "^7.7.4",
+        "@babel/core": "^7.8.3",
+        "@babel/node": "^7.8.3",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "@babel/preset-react": "^7.8.3",
+        "@babel/preset-typescript": "^7.8.3",
         "@hot-loader/react-dom": "16.11.0",
         "@types/autoprefixer": "^9.5.0",
         "@types/axios": "^0.14.0",
-        "@types/bootstrap": "^4.3.1",
         "@types/chalk": "^2.2.0",
         "@types/core-js": "^2.5.2",
         "@types/enzyme": "^3.10.4",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/enzyme-to-json": "^1.5.3",
-        "@types/eslint": "^6.1.3",
+        "@types/eslint": "^6.1.7",
         "@types/eslint-plugin-prettier": "^2.2.0",
-        "@types/history": "^4.7.2",
+        "@types/history": "^4.7.4",
         "@types/html-webpack-plugin": "^3.2.1",
-        "@types/jest": "^24.0.23",
+        "@types/jest": "^25.1.0",
         "@types/jest-cli": "^24.3.0",
         "@types/jsdom": "^12.2.4",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.31",
         "@types/prettier": "^1.19.0",
-        "@types/react": "^16.9.15",
-        "@types/react-dom": "^16.9.4",
-        "@types/react-helmet": "^5.0.14",
+        "@types/react": "^16.9.19",
+        "@types/react-dom": "^16.9.5",
+        "@types/react-helmet": "^5.0.15",
         "@types/react-hot-loader": "^4.1.1",
-        "@types/react-redux": "^7.1.5",
-        "@types/react-router": "^5.1.3",
+        "@types/react-redux": "^7.1.7",
+        "@types/react-router": "^5.1.4",
         "@types/react-router-dom": "^5.1.3",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
@@ -94,68 +92,68 @@
         "@types/redux-thunk": "^2.1.0",
         "@types/reselect": "^2.2.0",
         "@types/rimraf": "^2.0.3",
-        "@types/styled-components": "^4.4.0",
+        "@types/styled-components": "^4.4.2",
         "@types/stylelint": "^9.10.1",
         "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.41.0",
+        "@types/webpack": "^4.41.3",
         "@types/webpack-bundle-analyzer": "^2.13.3",
         "@types/webpack-dev-server": "^3.9.0",
-        "@types/webpack-env": "^1.14.1",
-        "@typescript-eslint/eslint-plugin": "^2.10.0",
-        "@typescript-eslint/parser": "^2.10.0",
-        "autoprefixer": "^9.7.3",
+        "@types/webpack-env": "^1.15.0",
+        "@typescript-eslint/eslint-plugin": "^2.18.0",
+        "@typescript-eslint/parser": "^2.18.0",
+        "autoprefixer": "^9.7.4",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.3",
-        "babel-jest": "^24.8.0",
+        "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-module-resolver": "^3.2.0",
         "chalk": "^3.0.0",
-        "cross-env": "^6.0.3",
-        "css-loader": "^3.2.1",
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.15.1",
+        "cross-env": "^7.0.0",
+        "css-loader": "^3.4.2",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.3",
-        "eslint": "^6.7.2",
+        "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
-        "eslint-config-prettier": "^6.7.0",
+        "eslint-config-prettier": "^6.10.0",
         "eslint-import-resolver-typescript": "^2.0.0",
         "eslint-plugin-html": "^6.0.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^23.1.1",
+        "eslint-plugin-import": "^2.20.0",
+        "eslint-plugin-jest": "^23.6.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-react": "^7.17.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.18.0",
         "eslint-plugin-react-hooks": "^2.3.0",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.1.0",
-        "jest": "^24.8.0",
-        "jest-cli": "^24.8.0",
+        "husky": "^4.2.1",
+        "jest": "^25.1.0",
+        "jest-cli": "^25.1.0",
         "jsdom": "^15.2.1",
-        "node-sass": "^4.13.0",
+        "node-sass": "^4.13.1",
         "postcss-flexbugs-fixes": "^4.1.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.19.1",
         "prettier-eslint": "^9.0.1",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.12.18",
+        "react-hot-loader": "^4.12.19",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "rimraf": "^3.0.0",
-        "sass-loader": "^8.0.0",
-        "style-loader": "^1.0.1",
-        "stylelint": "^12.0.0",
+        "rimraf": "^3.0.1",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "stylelint": "^13.0.0",
         "stylelint-config-prettier": "^7.0.0",
         "stylelint-config-recommended": "^3.0.0",
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.9.0",
-        "typescript": "^3.7.3",
+        "typescript": "^3.7.5",
         "url-loader": "^3.0.0",
-        "webpack": "^4.41.2",
+        "webpack": "^4.41.5",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0"
+        "webpack-dev-server": "^3.10.1"
     },
     "browserslist": [
         "> 0.5%",
