--- a/package.json
+++ b/package.json
@@ -40,22 +40,22 @@
         "core-js": "^3.6.5",
         "history": "^4.10.1",
         "normalize.css": "^8.0.1",
-        "npm": "^6.14.4",
+        "npm": "^6.14.5",
         "react": "16.13.1",
         "react-dom": "16.13.1",
-        "react-helmet-async": "^1.0.5",
+        "react-helmet-async": "^1.0.6",
         "react-redux": "^7.2.0",
-        "react-router": "^5.1.2",
-        "react-router-dom": "^5.1.2",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.0",
+        "@babel/core": "^7.9.6",
         "@babel/node": "^7.8.7",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-env": "^7.9.5",
+        "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
         "@hot-loader/react-dom": "16.13.0",
@@ -76,17 +76,17 @@
         "@types/jest-cli": "^24.3.0",
         "@types/jsdom": "^16.2.1",
         "@types/mini-css-extract-plugin": "^0.9.1",
-        "@types/node": "^13.13.1",
+        "@types/node": "^13.13.5",
         "@types/node-sass": "^4.11.0",
         "@types/npm": "^2.0.31",
         "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
         "@types/prettier": "^2.0.0",
-        "@types/react": "^16.9.34",
-        "@types/react-dom": "^16.9.6",
+        "@types/react": "^16.9.35",
+        "@types/react-dom": "^16.9.8",
         "@types/react-hot-loader": "^4.1.1",
-        "@types/react-redux": "^7.1.7",
-        "@types/react-router": "^5.1.5",
-        "@types/react-router-dom": "^5.1.4",
+        "@types/react-redux": "^7.1.8",
+        "@types/react-router": "^5.1.7",
+        "@types/react-router-dom": "^5.1.5",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-logger": "^3.0.7",
@@ -99,69 +99,70 @@
         "@types/webpack": "^4.41.12",
         "@types/webpack-bundle-analyzer": "^2.13.3",
         "@types/webpack-dev-server": "^3.10.1",
-        "@types/webpack-env": "^1.15.1",
+        "@types/webpack-env": "^1.15.2",
         "@types/webpack-merge": "^4.1.5",
-        "@typescript-eslint/eslint-plugin": "^2.29.0",
-        "@typescript-eslint/parser": "^2.29.0",
+        "@typescript-eslint/eslint-plugin": "^2.32.0",
+        "@typescript-eslint/parser": "^2.32.0",
         "autoprefixer": "^9.7.6",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.1.0",
-        "babel-jest": "^25.4.0",
+        "babel-jest": "^25.5.1",
         "babel-loader": "^8.1.0",
         "babel-plugin-module-resolver": "^4.0.0",
         "chalk": "^4.0.0",
         "circular-dependency-plugin": "^5.2.0",
         "cross-env": "^7.0.2",
-        "css-loader": "^3.5.2",
+        "css-loader": "^3.5.3",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.4.4",
-        "eslint": "^6.8.0",
+        "eslint": "^7.0.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-typescript": "^2.0.0",
         "eslint-plugin-html": "^6.0.2",
         "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jest": "^23.8.2",
+        "eslint-plugin-jest": "^23.10.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "~2.4.0",
+        "eslint-plugin-react-hooks": "2.5.1",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.2.0",
+        "html-webpack-plugin": "^4.3.0",
         "husky": "^4.2.5",
         "immutable": "^4.0.0-rc.12",
-        "jest": "^25.4.0",
-        "jest-cli": "^25.4.0",
+        "jest": "^26.0.1",
+        "jest-cli": "^26.0.1",
         "jsdom": "^16.2.2",
         "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.13.1",
+        "node-sass": "^4.14.1",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "postcss-flexbugs-fixes": "^4.2.0",
+        "postcss-flexbugs-fixes": "^4.2.1",
+        "postcss-html": "^0.36.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.5",
         "prettier-eslint": "^9.0.1",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.12.20",
+        "react-hot-loader": "^4.12.21",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
         "rimraf": "^3.0.2",
         "sass-loader": "^8.0.2",
         "seamless-immutable": "^7.1.4",
-        "style-loader": "^1.1.4",
+        "style-loader": "^1.2.1",
         "stylelint": "^13.3.3",
         "stylelint-config-prettier": "^8.0.1",
         "stylelint-config-recommended": "^3.0.0",
         "stylelint-config-recommended-scss": "^4.2.0",
-        "stylelint-scss": "^3.17.1",
-        "terser-webpack-plugin": "^2.3.5",
+        "stylelint-scss": "^3.17.2",
+        "terser-webpack-plugin": "^3.0.1",
         "typescript": "^3.8.3",
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
         "webpack-bundle-analyzer": "^3.7.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^4.2.2"
     },
     "browserslist": [
