--- a/package.json
+++ b/package.json
@@ -156,7 +156,8 @@
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "whatwg-fetch": "^3.6.20"
   },
   "jest": {
     "collectCoverageFrom": [
