--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "reduxjs",
         "sourcemap",
         "spaceflightnewsapi",
+        "stackdump",
         "streetsidesoftware",
         "teamsupercell",
         "tseslint",
